tests/ui-stable/invalid-impls/invalid-impls.stderr
error[E0277]: the trait bound `T: zerocopy::TryFromBytes` is not satisfied
  --> tests/ui-stable/invalid-impls/invalid-impls.rs:26:39
   |
26 | impl_or_verify!(T => TryFromBytes for Foo<T>);
   |                                       ^^^^^^ the trait `zerocopy::TryFromBytes` is not implemented for `T`
   |
note: required for `Foo<T>` to implement `zerocopy::TryFromBytes`
  --> tests/ui-stable/invalid-impls/invalid-impls.rs:22:10
   |
22 | #[derive(TryFromBytes, FromZeros, FromBytes, AsBytes, Unaligned)]
   |          ^^^^^^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
note: required by a bound in `_::Subtrait`
  --> tests/ui-stable/invalid-impls/../../../src/macros.rs
   |
   |             trait Subtrait: $trait {}
   |                             ^^^^^^ required by this bound in `Subtrait`
   |
  ::: tests/ui-stable/invalid-impls/invalid-impls.rs:26:1
   |
26 | impl_or_verify!(T => TryFromBytes for Foo<T>);
   | --------------------------------------------- in this macro invocation
   = note: this error originates in the derive macro `TryFromBytes` which comes from the expansion of the macro `impl_or_verify` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider restricting type parameter `T`
   |
26 | impl_or_verify!(T: zerocopy::TryFromBytes => TryFromBytes for Foo<T>);
   |                  ++++++++++++++++++++++++

error[E0277]: the trait bound `T: FromZeroes` is not satisfied
  --> tests/ui-stable/invalid-impls/invalid-impls.rs:27:36
   |
27 | impl_or_verify!(T => FromZeros for Foo<T>);
   |                                    ^^^^^^ the trait `FromZeroes` is not implemented for `T`
   |
note: required for `Foo<T>` to implement `FromZeroes`
  --> tests/ui-stable/invalid-impls/invalid-impls.rs:22:24
   |
22 | #[derive(TryFromBytes, FromZeros, FromBytes, AsBytes, Unaligned)]
   |                        ^^^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
note: required by a bound in `_::Subtrait`
  --> tests/ui-stable/invalid-impls/../../../src/macros.rs
   |
   |             trait Subtrait: $trait {}
   |                             ^^^^^^ required by this bound in `Subtrait`
   |
  ::: tests/ui-stable/invalid-impls/invalid-impls.rs:27:1
   |
27 | impl_or_verify!(T => FromZeros for Foo<T>);
   | ------------------------------------------ in this macro invocation
   = note: this error originates in the derive macro `FromZeros` which comes from the expansion of the macro `impl_or_verify` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider restricting type parameter `T`
   |
27 | impl_or_verify!(T: zerocopy::FromZeros => FromZeros for Foo<T>);
   |                  +++++++++++++++++++++

error[E0277]: the trait bound `T: zerocopy::FromBytes` is not satisfied
  --> tests/ui-stable/invalid-impls/invalid-impls.rs:28:36
   |
28 | impl_or_verify!(T => FromBytes for Foo<T>);
   |                                    ^^^^^^ the trait `zerocopy::FromBytes` is not implemented for `T`
   |
note: required for `Foo<T>` to implement `zerocopy::FromBytes`
  --> tests/ui-stable/invalid-impls/invalid-impls.rs:22:35
   |
22 | #[derive(TryFromBytes, FromZeros, FromBytes, AsBytes, Unaligned)]
   |                                   ^^^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
note: required by a bound in `_::Subtrait`
  --> tests/ui-stable/invalid-impls/../../../src/macros.rs
   |
   |             trait Subtrait: $trait {}
   |                             ^^^^^^ required by this bound in `Subtrait`
   |
  ::: tests/ui-stable/invalid-impls/invalid-impls.rs:28:1
   |
28 | impl_or_verify!(T => FromBytes for Foo<T>);
   | ------------------------------------------ in this macro invocation
   = note: this error originates in the derive macro `FromBytes` which comes from the expansion of the macro `impl_or_verify` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider restricting type parameter `T`
   |
28 | impl_or_verify!(T: zerocopy::FromBytes => FromBytes for Foo<T>);
   |                  +++++++++++++++++++++

error[E0277]: the trait bound `T: zerocopy::AsBytes` is not satisfied
  --> tests/ui-stable/invalid-impls/invalid-impls.rs:29:34
   |
29 | impl_or_verify!(T => AsBytes for Foo<T>);
   |                                  ^^^^^^ the trait `zerocopy::AsBytes` is not implemented for `T`
   |
note: required for `Foo<T>` to implement `zerocopy::AsBytes`
  --> tests/ui-stable/invalid-impls/invalid-impls.rs:22:46
   |
22 | #[derive(TryFromBytes, FromZeros, FromBytes, AsBytes, Unaligned)]
   |                                              ^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
note: required by a bound in `_::Subtrait`
  --> tests/ui-stable/invalid-impls/../../../src/macros.rs
   |
   |             trait Subtrait: $trait {}
   |                             ^^^^^^ required by this bound in `Subtrait`
   |
  ::: tests/ui-stable/invalid-impls/invalid-impls.rs:29:1
   |
29 | impl_or_verify!(T => AsBytes for Foo<T>);
   | ---------------------------------------- in this macro invocation
   = note: this error originates in the derive macro `AsBytes` which comes from the expansion of the macro `impl_or_verify` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider restricting type parameter `T`
   |
29 | impl_or_verify!(T: zerocopy::AsBytes => AsBytes for Foo<T>);
   |                  +++++++++++++++++++

error[E0277]: the trait bound `T: zerocopy::Unaligned` is not satisfied
  --> tests/ui-stable/invalid-impls/invalid-impls.rs:30:36
   |
30 | impl_or_verify!(T => Unaligned for Foo<T>);
   |                                    ^^^^^^ the trait `zerocopy::Unaligned` is not implemented for `T`
   |
note: required for `Foo<T>` to implement `zerocopy::Unaligned`
  --> tests/ui-stable/invalid-impls/invalid-impls.rs:22:55
   |
22 | #[derive(TryFromBytes, FromZeros, FromBytes, AsBytes, Unaligned)]
   |                                                       ^^^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
note: required by a bound in `_::Subtrait`
  --> tests/ui-stable/invalid-impls/../../../src/macros.rs
   |
   |             trait Subtrait: $trait {}
   |                             ^^^^^^ required by this bound in `Subtrait`
   |
  ::: tests/ui-stable/invalid-impls/invalid-impls.rs:30:1
   |
30 | impl_or_verify!(T => Unaligned for Foo<T>);
   | ------------------------------------------ in this macro invocation
   = note: this error originates in the derive macro `Unaligned` which comes from the expansion of the macro `impl_or_verify` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider restricting type parameter `T`
   |
30 | impl_or_verify!(T: zerocopy::Unaligned => Unaligned for Foo<T>);
   |                  +++++++++++++++++++++
